"Delete unnecessary fields in User entity, add some methods with tests"